# Ontology_Engine

./: .dockerignore  .env.example  .env.production  .env.production.example  .gitignore  .venv  Dockerfile  HANDOFF.md  PRD_Ontology_Engine_Complete.md  PRD_ScopeBridge_Complete.md  Procfile  README.md  ontology_kb.json  progress.txt  pyproject.toml  railway.toml  start.sh  vercel.json
.agents/: HANDOFF.md
.agents/archive/: A.md  G.md  I.md  M.md  Q.md  README.md
.agents/assignments/: E_kb_orchestrator_skill.md  F_pipeline_wiring.md  G_llm_integration.md
.agents/rules/: project-rules.md
.agents/status/: B.md  C.md  F.md  H.md  J.md  K.md  L.md  N.md  O.md  P.md  README.md
.agents/workflows/: agent.md  done.md  orchestrate.md
R&D-Unsynthesized/: deep-research-report.md
R&D-Unsynthesized/markdown/: Data Friction Matrix Generation.md  GOAS Data Friction Matrix Generation.md  PRD - ScopeBridge.md  Roofing CRM & Xactimate Integration Blueprint.md  Xactimate Data Extraction Research Plan.md  Z → A Pipeline Research & Blueprint.md  chatgemini -summary.json  gemchat-Ontology Thinking Mode.md  research-xactimite-pdf-esx.json
docs/: APP_STATUS.md  DEPLOYMENT.md  FINANCIAL.md
docs/adr/: 001-z-to-a-pipeline.md
docs/briefings/: alpha_briefing.md  beta_briefing.md  delta_briefing.md  gamma_briefing.md  hotel_briefing.md
job_oe_upload_polish/: design_assets.json  job_spec.json
src/ontology_engine/: __init__.py  __main__.py  api.py  config.py  pipeline.py  supabase_client.py
tests/: conftest.py
tests/red_team/: __init__.py  conftest.py  test_k1_node1_malformed_pdf.py  test_k2_node2_extraction_edge.py  test_k3_node3_calculus_overflow.py  test_k4_contract_fuzzing.py  test_k5_node5_adversarial.py  test_k6_pipeline_stress.py
tests/test_api/: test_api.py
web/: .env.example  .env.production  .env.production.example  index.html  package-lock.json  package.json  vercel.json  vite.config.js
web/src/: main.js
(+86 files in other folders)
